--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: 'Guardian Plan'
+name: 'guardian_plan'
 
 on:
   workflow_call:
@@ -25,15 +25,18 @@ on:
       wif_service_account:
         required: true
         type: string
-      guardian_bucket_name:
+      bucket_name:
         required: true
         type: string
-      guardian_terraform_version:
+      terraform_version:
         required: true
         type: string
-      guardian_protect_lockfile:
+      protect_lockfile:
         type: boolean
         default: true
+      lock_timeout:
+        type: string
+        default: '10m'
       max_retries:
         required: false
         default: 5
@@ -50,14 +53,6 @@ on:
       workflow_github_token:
         required: false
 
-env:
-  GUARDIAN_BUCKET_NAME: ${{ inputs.guardian_bucket_name }}
-  GUARDIAN_PLAN_PREFIX: 'guardian-plans/${{ github.repository }}/${{ github.event.pull_request.number }}/${{ inputs.working_directory }}'
-  GUARDIAN_PLAN_FILENAME: 'tfplan.binary'
-  GITHUB_TOKEN: ${{ secrets.workflow_github_token || github.token }}
-  OUT_FILENAME: 'out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
-  TF_IN_AUTOMATION: true # tell terraform this is an automated workflow https://developer.hashicorp.com/terraform/tutorials/automation/automate-terraform#controlling-terraform-output-in-automation
-
 jobs:
   plan:
     runs-on: 'ubuntu-latest'
@@ -66,27 +61,7 @@ jobs:
       id-token: 'write'
       pull-requests: 'write'
 
-    # ensure these defaults exist to run command in the specified working_directory
-    defaults:
-      run:
-        shell: 'bash'
-        working-directory: '${{ inputs.working_directory }}'
-
     steps:
-      - name: 'Start Comment'
-        id: 'comment'
-        uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # ratchet:actions/github-script@v6
-        with:
-          retries: ${{ inputs.max_retries }}
-          script: |-
-            const { data: prComment } = await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body: `**\`🔱 Guardian 🔱\`** - 🟨 Running Plan in dir: \`${{inputs.working_directory}}\``,
-            });
-            return prComment.id
-
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
 
@@ -96,114 +71,16 @@ jobs:
           workload_identity_provider: '${{ inputs.wif_provider }}'
           service_account: '${{ inputs.wif_service_account }}'
 
-      - name: 'Setup Terraform'
-        uses: abcxyz/secure-setup-terraform@78e3f2fdfb7ebf59ce42141f6dd93bdd65bf04ed # ratchet:abcxyz/secure-setup-terraform@v0.2.5
+      - name: 'Guardian Plan'
+        uses: 'abcxyz/guardian/.github/actions/plan@${{ github.job_workflow_sha }}' # match the sha for the reusable workflow
+        env:
+          GITHUB_TOKEN: '${{ secrets.workflow_github_token || github.token }}'
         with:
-          terraform_version: '${{ inputs.guardian_terraform_version }}'
-          terraform_module_location: './${{ inputs.working_directory }}'
-          terraform_lockfile_location: './${{ inputs.working_directory }}'
-          protect_lockfile: ${{ inputs.guardian_protect_lockfile }}
-          terraform_wrapper: false
-
-      - name: 'Set up Cloud SDK'
-        uses: 'google-github-actions/setup-gcloud@62d4898025f6041e16b1068643bfc5a696863587' # ratchet:google-github-actions/setup-gcloud@v1
-
-      - name: 'Cloud SDK Config'
-        run: |-
-          echo "# Cloud SDK Config" > ${{ env.OUT_FILENAME }}
-          gcloud config set storage/max_retries ${{ inputs.max_retries }} 2>&1 | tee -a ${{ env.OUT_FILENAME }}
-          gcloud config set storage/base_retry_delay ${{ inputs.base_retry_delay }} 2>&1 | tee -a ${{ env.OUT_FILENAME }}
-          gcloud config set storage/max_retry_delay ${{ inputs.max_retry_delay }} 2>&1 | tee -a ${{ env.OUT_FILENAME }}
-
-      - name: 'Terraform Format'
-        run: |-
-          echo "# Terraform Format" > ${{ env.OUT_FILENAME }}
-          terraform fmt -check -diff -recursive -no-color 2>&1 | tee -a ${{ env.OUT_FILENAME }}
-
-      - name: 'Terraform Init'
-        run: |-
-          echo "# Terraform Init" > ${{ env.OUT_FILENAME }}
-          terraform init -input=false -no-color 2>&1 | tee -a ${{ env.OUT_FILENAME }}
-
-      - name: 'Terraform Validate'
-        run: |-
-          echo "# Terraform Validate" > ${{ env.OUT_FILENAME }}
-          terraform validate -no-color 2>&1 | tee -a ${{ env.OUT_FILENAME }}
-
-      - name: 'Terraform Plan'
-        run: |-
-          echo "# Terraform Plan" > ${{ env.OUT_FILENAME }}
-          terraform plan -lock-timeout=10m -input=false -no-color -out=${{ env.GUARDIAN_PLAN_FILENAME }} 2>&1 | tee -a ${{ env.OUT_FILENAME }}
-
-      - name: 'Terraform Show'
-        run: |-
-          echo "# Terraform Show" > ${{ env.OUT_FILENAME }}
-          terraform show -no-color ${{ env.GUARDIAN_PLAN_FILENAME }} 2>&1 | tee -a ${{ env.OUT_FILENAME }}
-
-      - name: 'GitHub Format'
-        run: |-
-          sed -i -E 's|^([[:space:]]*)([~])|\1\!|g' ${{ env.OUT_FILENAME }}
-          sed -i -E 's|^([[:space:]]*)([-+\!])|\2\1|g' ${{ env.OUT_FILENAME }}
-
-      - name: 'Set Success Variable'
-        run: |-
-          SUCCESS=$(cat ${{ env.OUT_FILENAME }})
-          echo "SUCCESS<<EOF" >> $GITHUB_ENV
-          echo "$SUCCESS" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
-
-      - name: 'Upload Plan File'
-        run: |-
-          echo "# Upload Plan File" > ${{ env.OUT_FILENAME }}
-          gcloud storage cp \
-            ${{ env.GUARDIAN_PLAN_FILENAME }} \
-            gs://${{ env.GUARDIAN_BUCKET_NAME }}/${{ env.GUARDIAN_PLAN_PREFIX }}/${{ env.GUARDIAN_PLAN_FILENAME }} 2>&1 | tee -a ${{ env.OUT_FILENAME }}
-
-      - name: 'Set Failure Variable'
-        if: ${{ failure() }}
-        run: |-
-          # ensure outfile exists, initial steps could fail without ever writing to out file
-          touch ${{ env.OUT_FILENAME }}
-
-          FAILURE=$(cat ${{ env.OUT_FILENAME }})
-          echo "FAILURE<<EOF" >> $GITHUB_ENV
-          echo "$FAILURE" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
-
-      - name: 'Failure Comment'
-        if: ${{ failure() }}
-        uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # ratchet:actions/github-script@v6
-        with:
-          retries: ${{ inputs.max_retries }}
-          script: |-
-            await github.rest.issues.updateComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              comment_id: '${{ steps.comment.outputs.result }}',
-              body: `**\`🔱 Guardian 🔱\`** - 🟥 Failed to run Plan in dir: \`${{inputs.working_directory}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }})]\n
-            <details>
-            <summary>Details</summary>\n
-            \`\`\`diff\n
-            ${{env.OUT}}
-            \`\`\`
-            </details>`,
-            });
-
-      - name: 'Success Comment'
-        if: ${{ success() }}
-        uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # ratchet:actions/github-script@v6
-        with:
-          retries: ${{ inputs.max_retries }}
-          script: |-
-            await github.rest.issues.updateComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              comment_id: '${{ steps.comment.outputs.result }}',
-              body: `**\`🔱 Guardian 🔱\`** - 🟩 Ran Plan in dir: \`${{inputs.working_directory}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }})]\n
-            <details>
-            <summary>Diff</summary>\n
-            \`\`\`diff\n
-            ${{env.SUCCESS}}
-            \`\`\`
-            </details>`,
-            });
+          working_directory: '${{ matrix.working_directory }}'
+          bucket_name: '${{ inputs.bucket_name }}'
+          terraform_version: '${{ inputs.terraform_version }}'
+          protect_lockfile: '${{ inputs.protect_lockfile }}'
+          lock_timeout: '${{ inputs.lock_timeout }}'
+          max_retries: '${{ inputs.max_retries }}'
+          base_retry_delay: '${{ inputs.base_retry_delay }}'
+          max_retry_delay: '${{ inputs.max_retry_delay }}'
