--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -34,8 +34,30 @@ concurrency:
   group: '${{ github.workflow }}-${{ github.head_ref || github.ref }}'
 
 jobs:
-  plan:
+  init:
     runs-on: 'ubuntu-latest'
+    outputs:
+      dirs: ${{ steps.dirs.outputs.dirs }}
+    steps:
+      - name: 'Checkout'
+        uses: 'actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3' # ratchet:actions/checkout@v3
+        with:
+          fetch-depth: 2
+
+      - name: 'Guardian Directories'
+        id: 'dirs'
+        uses: './.github/actions/directories'
+        with:
+          detect_changes: 'true'
+
+  plan:
+    needs:
+      - 'init'
+    runs-on: 'ubuntu-latest'
+    strategy:
+      fail-fast: false
+      matrix:
+        working_directory: ${{ fromJSON(needs.init.outputs.dirs) }}
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
@@ -67,6 +89,23 @@ jobs:
         env:
           GITHUB_TOKEN: '${{ steps.mint-token.outputs.token }}'
         with:
-          working_directory: 'terraform'
+          working_directory: '${{ matrix.working_directory }}'
           bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
           terraform_version: '1.3.6'
+
+  plan_success:
+    needs:
+      - 'plan'
+    runs-on: 'ubuntu-latest'
+    steps:
+      - name: 'Success'
+        if: ${{ needs.plan.result == 'success' }}
+        run: |-
+          echo "All plans successful!"
+          exit 0
+
+      - name: 'Failure'
+        if: ${{ needs.plan.result != 'success' }}
+        run: |-
+          echo "Plan run has failures."
+          exit 1
