--- a/examples/guardian-admin.yml
+++ b/examples/guardian-admin.yml
@@ -12,17 +12,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: 'guardian_admin'
-run-name: 'Guardian Admin - ${{ inputs.command }} ${{ inputs.number }}'
+name: 'test_guardian_admin'
+run-name: 'test_guardian_admin - ${{ inputs.command }}'
 
 on:
   workflow_dispatch:
     inputs:
       command:
-        description: 'COMMAND - The Terraform command to run including any arguments (this value is appended to the terraform command).'
+        description: 'COMMAND - The Terraform command to run including any arguments (this value is appended to the Terraform command).'
         required: true
-      number:
-        description: 'PR NUMBER - The Pull Request number to run the actions for (if blank, runs for the repository default branch).'
+      directories:
+        description: 'DIRECTORIES - A CSV list of directories execute the Terraform command in. If left blank, the Terraform command will run for all configured directories.'
+        type: string
 
 permissions:
   contents: 'read'
@@ -34,13 +35,28 @@ concurrency:
   group: '${{ github.workflow_ref }}'
 
 jobs:
+  init:
+    runs-on: 'ubuntu-latest'
+    outputs:
+      dirs: ${{ steps.dirs.outputs.dirs }}
+    steps:
+      - name: 'Checkout'
+        uses: 'actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3' # ratchet:actions/checkout@v3
+
+      - name: 'Guardian Directories'
+        id: 'dirs'
+        uses: 'abcyxz/guardian/.github/actions/directories@main' # TODO: pin this to the latest sha in the guardian repo
+        with:
+          directories: '${{ inputs.directories }}'
+
   admin:
+    needs:
+      - 'init'
     runs-on: 'ubuntu-latest'
     strategy:
       fail-fast: false
       matrix:
-        working_directory:
-          - 'terraform' # TODO: update with repository working directories
+        working_directory: ${{ fromJSON(needs.init.outputs.dirs) }}
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
