--- a/examples/guardian-apply.yml
+++ b/examples/guardian-apply.yml
@@ -29,13 +29,28 @@ concurrency:
   group: '${{ github.workflow_ref }}'
 
 jobs:
+  init:
+    runs-on: 'ubuntu-latest'
+    outputs:
+      dirs: ${{ steps.dirs.outputs.dirs }}
+    steps:
+      - name: 'Checkout'
+        uses: 'actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3' # ratchet:actions/checkout@v3
+
+      - name: 'Guardian Directories'
+        id: 'dirs'
+        uses: 'abcxyz/guardian/.github/actions/directories@main' # TODO: pin this to the latest sha in the guardian repo
+        with:
+          detect_changes: 'true'
+
   apply:
+    needs:
+      - 'init'
     runs-on: 'ubuntu-latest'
     strategy:
       fail-fast: false
       matrix:
-        working_directory:
-          - 'terraform' # TODO: update with repository working directories
+        working_directory: ${{ fromJSON(needs.init.outputs.dirs) }}
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
