--- a/.github/workflows/test-admin.yml
+++ b/.github/workflows/test-admin.yml
@@ -38,7 +38,7 @@ jobs:
   init:
     runs-on: 'ubuntu-latest'
     outputs:
-      dirs: ${{ steps.dirs.outputs.dirs }}
+      directories: ${{ steps.dirs.outputs.directories }}
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3' # ratchet:actions/checkout@v3
@@ -50,13 +50,14 @@ jobs:
           directories: '${{ inputs.directories }}'
 
   admin:
+    if: ${{ needs.init.outputs.directories != '[]' }}
     needs:
       - 'init'
     runs-on: 'ubuntu-latest'
     strategy:
       fail-fast: false
       matrix:
-        working_directory: ${{ fromJSON(needs.init.outputs.dirs) }}
+        working_directory: ${{ fromJSON(needs.init.outputs.directories) }}
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
