--- a/.github/workflows/test-apply.yml
+++ b/.github/workflows/test-apply.yml
@@ -29,8 +29,31 @@ concurrency:
   group: '${{ github.workflow_ref }}'
 
 jobs:
-  apply:
+  init:
     runs-on: 'ubuntu-latest'
+    outputs:
+      directories: ${{ steps.dirs.outputs.directories }}
+    steps:
+      - name: 'Checkout'
+        uses: 'actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3' # ratchet:actions/checkout@v3
+        with:
+          fetch-depth: 2 # required to get diff between HEAD and HEAD-1
+
+      - name: 'Guardian Directories'
+        id: 'dirs'
+        uses: './.github/actions/directories'
+        with:
+          detect_apply_changes: 'true'
+
+  apply:
+    if: ${{ needs.init.outputs.directories != '[]' }}
+    needs:
+      - 'init'
+    runs-on: 'ubuntu-latest'
+    strategy:
+      fail-fast: false
+      matrix:
+        working_directory: ${{ fromJSON(needs.init.outputs.directories) }}
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
@@ -60,6 +83,6 @@ jobs:
         env:
           GITHUB_TOKEN: '${{ steps.mint-token.outputs.token }}'
         with:
-          working_directory: 'terraform'
+          working_directory: '${{ matrix.working_directory }}'
           bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
           terraform_version: '1.3.6'
