--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -37,7 +37,7 @@ jobs:
   init:
     runs-on: 'ubuntu-latest'
     outputs:
-      directories: ${{ steps.dirs.outputs.directories }}
+      directories: '${{ steps.dirs.outputs.directories }}'
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
@@ -59,7 +59,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        working_directory: ${{ fromJSON(needs.init.outputs.directories) }}
+        working_directory: '${{ fromJSON(needs.init.outputs.directories) }}'
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
